--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -54,7 +54,7 @@ parameters:  # see http://build.fhir.org/ig/FHIR/fhir-tools-ig/branches/master/C
   apply-publisher: 'true'
   apply-version: 'true'
   autoload-resources: 'true'
-  path-output: docs
+#  path-output: docs
   fmm-definition: maturity.html
   excludettl: 'true'
   special-url: 
