stage next release

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -8,7 +8,7 @@ name: VAMHVFHIRPHR
 title: "MyHealtheVet PHR FHIR API"
 description: "MyHealtheVet exposing PHR using FHIR and Testing Plan."
 status: active
-version: 0.2.10
+version: 0.2.11
 fhirVersion: 4.0.1
 copyrightyear: '2022+'
 #date: 2022-04-14
@@ -54,7 +54,7 @@ parameters:  # see http://build.fhir.org/ig/FHIR/fhir-tools-ig/branches/master/C
   apply-publisher: 'true'
   apply-version: 'true'
   autoload-resources: 'true'
-  path-output: docs
+#  path-output: docs
   fmm-definition: maturity.html
   excludettl: 'true'
   special-url: 
