--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -8,7 +8,7 @@ name: VAMHVFHIRPHR
 title: "MyHealtheVet PHR FHIR API"
 description: "MyHealtheVet exposing PHR using FHIR and Testing Plan."
 status: active
-version: 0.2.11
+version: 0.2.11-ci
 fhirVersion: 4.0.1
 copyrightyear: '2022+'
 #date: 2022-04-14
