minor updates and work on labs.

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -101,7 +101,7 @@ pages:
     title: Test Plan
     generation: markdown
   downloads.md:
-    title: Downloads
+    title: About
     generation: markdown
   maturity.md:
     title: Maturity Definitions
@@ -127,4 +127,4 @@ menu:
     "Id vs Identifier" : identifier.html
   Test Plan: testplan.html
   Artifacts: artifacts.html
-  Downloads: downloads.html
+  About: downloads.html
