split pathology and microbiology

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -118,7 +118,8 @@ menu:
     "Condition": background.html#condition
     "ECG": background.html#ecg
     "Immunization": background.html#immunization
-    "LabReport": background.html#labreport
+    "Pathology": background.html#pathology-labreport
+    "Microbioloy": background.html#microbiology-labreport
     "Notes": background.html#notes
     "Radiology": background.html#radiology
     "Vital-Sign": background.html#vital-sign
