- notes   - added two new C & P notes   - added caution note that the examples are notional and may not have timezones, and may have different Patient, Practitioner, and Location resources as all examples are hand converted and I don't always convert the elements that are not critical to the prime resource use. - Move Radiology Report (aka imaging report) to DiagnosticReport to better align with OH - Add list of most common labs for Chem-Hem, Microbiology, and Pathology. Data we need to see - Microbiology   - clarify the DiagnosticReport.performer. Especially in the examples which were using .display

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -69,7 +69,7 @@ parameters:  # see http://build.fhir.org/ig/FHIR/fhir-tools-ig/branches/master/C
 resources:
   Bundle/images:
     name: Bundle of Radiology results from mock data
-    description: An example of a transaction Bundle with many image reports as DocumentReference. This was [transformed using the included XSLT](StructureDefinition-VA.MHV.PHR.imaging.html#notes) from the [mock sample SOAP message](https://github.com/department-of-veterans-affairs/mhv-fhir-phr-mapping/blob/main/mocks/radiology.xml) MHV receives.
+    description: An example of a transaction Bundle with many image reports as DiagnosticReport. This was [transformed using the included XSLT](StructureDefinition-VA.MHV.PHR.imaging.html#notes) from the [mock sample SOAP message](https://github.com/department-of-veterans-affairs/mhv-fhir-phr-mapping/blob/main/mocks/radiology.xml) MHV receives.
     exampleBoolean: true
 #  Bundle/vitals:
 #    name: Bundle of Vitals from mock data
@@ -121,7 +121,7 @@ menu:
     "Pathology": background.html#pathology-labreport
     "Microbioloy": background.html#microbiology-labreport
     "Notes": background.html#notes
-    "Radiology": background.html#radiology
+    "Radiology": background.html#imaging-reports
     "Vital-Sign": background.html#vital-sign
     "Utility" : utility.html
     "ConvertDate" : ConvertDate.html
