using general extensions

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -35,7 +35,7 @@ dependencies:
   hl7.fhir.us.core: 
     version: 5.0.x
     id: hl7fhiruscore
-  hl7.fhir.uv.extensions.r4: 1.0.x
+  hl7.fhir.uv.extensions: 1.0.x
 
 parameters:  # see http://build.fhir.org/ig/FHIR/fhir-tools-ig/branches/master/CodeSystem-ig-parameters.html
   path-resource:
